--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,42 +1,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,500;1,600;1,700&display=swap');
 
 .header {
-	padding: 3em;
+	width: 100vw;
+	padding: 2em;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
 
 .header_title {
-	font-size: 2em;
+	font-size: 1.5em;
 	font-family: 'Poppins', sans-serif;
 	font-weight: 700;
 	font-style: italic;
 }
 
+.hamburgerMenu {
+	height: 33px;
+	width: 55px;
+}
+
 .header_nav {
-}
-
-.header_nav ul {
-	padding: 0;
-	display: flex;
-	list-style: none;
-	justify-content: space-between;
-}
-
-.header_nav ul li {
-	margin: 1.5em;
-	font-family: 'Poppins', sans-serif;
-	font-weight: 600;
+	display: none;
 }
 
 .header_rightIcons {
-	display: flex;
-	align-items: center;
+	display: none;
 }
 
-.header_rightIcons span {
-	width: 50px;
-	font-family: 'Poppins', sans-serif;
-	font-weight: 600;
+@media (min-width: 768px) {
+	.header {
+		padding: 3em;
+	}
+	.hamburgerMenu {
+		display: none;
+	}
+	.header_nav {
+		display: block;
+	}
+
+	.header_nav ul {
+		padding: 0;
+		display: flex;
+		list-style: none;
+		justify-content: space-between;
+	}
+
+	.header_nav ul li {
+		margin: 1.5em;
+		font-family: 'Poppins', sans-serif;
+		font-weight: 600;
+	}
+	.header_rightIcons {
+		display: flex;
+		align-items: center;
+	}
+
+	.header_rightIcons span {
+		width: 50px;
+		font-family: 'Poppins', sans-serif;
+		font-size: 1.2em;
+		font-weight: 600;
+	}
 }
