--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,500;1,600;1,700&display=swap');
+
 html,
 body {
 	padding: 0;
 	margin: 0;
+	font-family: 'Poppins', sans-serif;
+}
+
+:root {
+	--dark-gray: #5e5e5e;
 }
 
 a {
