--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -9,7 +9,7 @@
 }
 
 .header_title {
-	font-size: 1.5em;
+	font-size: 1.8em;
 	font-family: 'Poppins', sans-serif;
 	font-weight: 700;
 	font-style: italic;
@@ -30,7 +30,7 @@
 
 @media (min-width: 1200px) {
 	.header {
-		padding: 3em;
+		padding: 3em 6em;
 	}
 	.hamburgerMenu {
 		display: none;
