--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,10 +5,12 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: 'Poppins', sans-serif;
+	overflow-x: hidden;
 }
 
 :root {
 	--dark-gray: #5e5e5e;
+	--orange: #e27b13;
 }
 
 a {
