--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,22 @@ body {
 	overflow-x: hidden;
 }
 
+body::-webkit-scrollbar {
+	width: 7px;
+	background-color: #ffffff;
+}
+body::-webkit-scrollbar-thumb {
+	background-color: #e27b13;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+}
+
+body::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: #f5f5f5;
+}
+
 :root {
 	--dark-gray: #5e5e5e;
 	--orange: #e27b13;
