--- a/src/UnderConstruction/UnderConstruction.module.css
+++ b/src/UnderConstruction/UnderConstruction.module.css
@@ -2,7 +2,7 @@
 
 .imageWrapper {
 	display: block;
-	width: 500px;
+	width: 300px;
 	height: 400px;
 	position: relative;
 }
@@ -28,8 +28,8 @@
 }
 .relativeDiv {
 	position: relative;
-	width: 300px;
-	height: 500px;
+	width: 100%;
+	height: 350px;
 }
 
 .imageWrapper {
@@ -38,7 +38,8 @@
 
 .backgroundSvg {
 	position: absolute;
-	width: 700px;
+	width: 400px;
+
 	z-index: -1;
 }
 
@@ -53,6 +54,28 @@
 		position: relative;
 	}
 	.imageWrapper {
+		display: block;
+		width: 500px;
+		height: 400px;
+		position: relative;
+	}
+
+	.imageWrapper {
 		margin-left: 50px;
+	}
+	.relativeDiv {
+		position: relative;
+		width: 300px;
+		height: 500px;
+	}
+
+	.imageWrapper {
+		position: absolute;
+	}
+
+	.backgroundSvg {
+		position: absolute;
+		width: 700px;
+		z-index: -1;
 	}
 }
